--- a/vue/todoList1.html
+++ b/vue/todoList1.html
@@ -9,13 +9,28 @@
 <body>
     <div id="app">
         <input type="text" v-model="inputValue" @keyup.enter="handleAddItem">
-        <ul>
+        <todo-list :data="list" @remove="handleRemoveItem"></todo-list>
+        <!-- <ul>
             <li @click="handleRemoveItem(index)" v-for="(item, index) in list">{{item}}</li>
-        </ul>
+        </ul> -->
     </div>
-
+    
     <script src="vue.js"></script>
     <script>
+    const todoList = {
+      props: ['data'],
+      template: `
+      <ul>
+        <li @click="handleClickItem(index)" v-for="(item, index) in data">{{item}}</li>
+      </ul>
+      `,
+      methods: {
+        handleClickItem(index) {
+          this.$emit('remove', index)
+        }
+      }
+    }
+
     const vm = new Vue({
         el: '#app',
         data: {
@@ -31,6 +46,9 @@
                 this.list.push(this.inputValue)
                 this.inputValue = ''
             }
+        },
+        components: {
+          todoList
         }
     })
     </script>
